--- a/src/timeline.html
+++ b/src/timeline.html
@@ -20,7 +20,7 @@
         <div class="flex justify-between">
           <!--Time Line Box-->
           <div
-            class="flex flex-col bg-white w-96 border-none rounded-2 shadow-md"
+            class="flex flex-col bg-white w-96 rounded-2 shadow-md border-1 border-solid border-gray-300 z-10"
           >
             <!--Header-->
             <div class="flex h-10 justify-between items-center pr-4 pl-2">
@@ -84,6 +84,192 @@
             </div>
           </div>
 
+          <!--Sidebar -->
+          <div
+            class="bg-white absolute left-0 bottom-0 top-40 w-96 z-0 flex flex-col"
+          >
+            <!--Header wrapper div-->
+            <div class="flex items-start justify-between p-3">
+              <div class="flex flex-col w-64">
+                <!--text div-->
+                <p class="font-bold text-base">
+                  Friday Night Rue Ferdinand-Hodler 23A
+                </p>
+                <p class="font-bold text-[12px] text-gray-400">
+                  Friday, May 5, 2023
+                </p>
+              </div>
+              <span class="material-symbols-outlined text-gray-400 text-[16px]">
+                chevron_left
+              </span>
+              <span class="material-symbols-outlined text-gray-400 text-[16px]">
+                chevron_right
+              </span>
+              <span class="material-symbols-outlined text-gray-400 text-[16px]">
+                delete
+              </span>
+            </div>
+            <div class="flex space-x-6 p-3">
+              <div class="flex space-x-1 items-center">
+                <span class="material-symbols-outlined text-[20px]">
+                  directions_bike
+                </span>
+                <div class="flex flex-col items-start">
+                  <p class="text-[10px] font-bold m-0">3.3 km</p>
+                  <p class="text-[10px] font-bold m-0">39m</p>
+                </div>
+              </div>
+              <div class="flex space-x-1 items-center">
+                <span class="material-symbols-outlined text-[20jpx]">
+                  motorcycle
+                </span>
+                <div class="flex flex-col items-start">
+                  <p class="text-[10px] font-bold m-0">5.8 km</p>
+                  <p class="text-[10px] font-bold m-0">20m</p>
+                </div>
+              </div>
+            </div>
+            <!--Line Separator-->
+            <div
+              class="border-b-2 border-solid border-gray-200 w-full mb-3"
+            ></div>
+            <div class="flex p-3 justify-between">
+              <span class="material-symbols-outlined text-[20px]">
+                stop_circle
+              </span>
+
+              <div class="flex flex-col">
+                <div class="flex items-center space-x-20">
+                  <div
+                    class="flex items-center p-2 h-7 border-[1px] border-solid border-gray-300"
+                  >
+                    <p class="text-[12px] font-bold mr-9">44 Rue de Versoix</p>
+                    <span class="material-symbols-outlined text-sm mr-1">
+                      arrow_drop_down
+                    </span>
+                  </div>
+
+                  <div class="flex space-x-2">
+                    <p class="text-[12px] font-bold text-gray-400">6:24 PM</p>
+                    <span
+                      class="material-symbols-outlined text-gray-400 text-[18px]"
+                    >
+                      more_vert
+                    </span>
+                  </div>
+                </div>
+
+                <p class="text-[10px] font-bold text-gray-400 mt-1 mb-3">
+                  44 Rue de Versoix, 01210 Ferney Voltaire
+                </p>
+
+                <div class="flex space-x-1 h-14">
+                  <img
+                    src="https://hotel-de-france-ferney-voltaire.hotelmix.fr/data/Photos/r888x757w/4135/413555/413555181/Hotel-De-France-Ferney-Voltaire-Exterior.JPEG"
+                    alt=""
+                    width="100"
+                  />
+                  <img
+                    src="https://hotel-de-france-ferney-voltaire.hotelmix.fr/data/Photos/r888x757w/10058/1005846/1005846643/Hotel-De-France-Ferney-Voltaire-Exterior.JPEG"
+                    alt=""
+                    width="100"
+                  />
+                  <img
+                    src="https://hotel-de-france-ferney-voltaire.hotelmix.fr/data/Photos/r888x757w/4135/413554/413554620/Hotel-De-France-Ferney-Voltaire-Exterior.JPEG"
+                    alt=""
+                    width="100"
+                  />
+                </div>
+              </div>
+            </div>
+
+            <!--Line Separator-->
+            <div
+              class="border-b-2 border-solid border-gray-200 my-3 w-full"
+            ></div>
+
+            <div class="flex items-center my-3 ml-12">
+              <span
+                class="material-symbols-outlined text-[20px] text-gray-400 mr-3"
+              >
+                directions_bike
+              </span>
+              <p class="text-[12px] font-bold text-gray-400 mr-32">
+                Cycling - 700 km
+              </p>
+              <p class="text-[12px] font-bold text-gray-400 mr-3">15 min</p>
+              <span class="material-symbols-outlined text-gray-400 text-[20px]">
+                edit
+              </span>
+            </div>
+            <!--End-->
+
+            <!--Line Separator-->
+            <div
+              class="border-b-2 border-solid border-gray-200 w-full mb-3"
+            ></div>
+            <div class="flex p-3 justify-between">
+              <span class="material-symbols-outlined text-[20px]">
+                stop_circle
+              </span>
+
+              <div class="flex flex-col">
+                <div class="flex items-center space-x-10">
+                  <div
+                    class="flex items-center p-2 h-7 border-[1px] border-solid border-gray-300"
+                  >
+                    <p class="text-[12px] font-bold mr-10">Ferney Voltaire</p>
+                    <span class="material-symbols-outlined text-sm mr-1">
+                      arrow_drop_down
+                    </span>
+                  </div>
+
+                  <div class="flex space-x-2">
+                    <p class="text-[12px] font-bold text-gray-400">
+                      6:40 PM-7:34 PM
+                    </p>
+                    <span
+                      class="material-symbols-outlined text-gray-400 text-[18px]"
+                    >
+                      more_vert
+                    </span>
+                  </div>
+                </div>
+
+                <p class="text-[10px] font-bold text-gray-400 mt-1 mb-3">
+                  01210
+                </p>
+              </div>
+            </div>
+
+            <!--Line Separator-->
+            <div
+              class="border-b-2 border-solid border-gray-200 my-3 w-full"
+            ></div>
+
+            <div class="flex items-center my-3 ml-12">
+              <span
+                class="material-symbols-outlined text-[20px] text-gray-400 mr-3"
+              >
+                directions_bike
+              </span>
+              <p class="text-[12px] font-bold text-gray-400 mr-32">
+                Cycling - 500 km
+              </p>
+              <p class="text-[12px] font-bold text-gray-400 mr-3">13 min</p>
+              <span class="material-symbols-outlined text-gray-400 text-[20px]">
+                edit
+              </span>
+            </div>
+            <!--End-->
+            <div
+              class="bg-red-500 h-60 w-2.5 rounded-md flex flex-col justify-between items-center p-1 absolute left-9 top-[170px]"
+            >
+              <div class="bg-white h-2 w-2 rounded-md"></div>
+              <div class="bg-white h-2 w-2 rounded-md"></div>
+            </div>
+          </div>
+
           <!-- Apps Icon and Profile avatar -->
           <div class="flex items-center space-x-3 self-start my-3 mx-5">
             <span class="material-symbols-outlined text-gray-400 text-3xl">
@@ -129,7 +315,7 @@
 
         <div
           id="trips"
-          class="flex bg-white h-32 w-full absolute bottom-0 items-center space-x-2"
+          class="flex bg-white h-32 w-full absolute bottom-0 items-center space-x-2 border-t border-solid border-gray-300"
         >
           <div
             class="flex space-x-3 justify-start bg-blue-500 h-full w-40 p-3 shadow-2xl"
